--- a/roadmap/2_Estrutura_Programa_C/3.md
+++ b/roadmap/2_Estrutura_Programa_C/3.md
@@ -1,112 +1,77 @@
-## 2.2 Explicação da Sintaxe da Linguagem 🌟
+## 2.3 Uso de Comentários e Formatação Adequada do Código ✨
 
-Nesta seção, vamos explorar a sintaxe da linguagem C. Vamos aprender sobre declaração de variáveis, operadores, expressões e instruções. Compreender a sintaxe é essencial para escrever programas em C corretamente. Vamos lá! 🚀
+Nesta seção, vamos aprender sobre o uso de comentários e a importância da formatação adequada do código em C. Comentários são úteis para documentar o código e torná-lo mais compreensível. A formatação adequada do código também contribui para uma leitura mais fácil e organizada, seguindo os princípios do Clean Code. Vamos lá! 🚀
 
-### Declaração de Variáveis 💡
+### Comentários em C 📝
 
-Em C, as variáveis são usadas para armazenar dados em locais específicos da memória. Antes de usar uma variável, é necessário declará-la, informando o tipo de dado que ela irá armazenar e um nome para a variável.
+Os comentários são trechos de texto que não são interpretados pelo compilador, mas servem para fornecer informações adicionais sobre o código. Existem dois tipos de comentários em C: comentários de linha e comentários em bloco.
 
+- **Comentários de Linha**: São utilizados para inserir comentários em uma única linha. O texto após as barras duplas `//` até o final da linha é considerado um comentário e é ignorado pelo compilador.
+
+Exemplo:
 ```c
-tipo nomeDaVariavel;
+// Este é um comentário de linha
+int idade = 25;  // Outro comentário de linha
 ```
 
-- **Tipo de Dado**: Indica o tipo de informação que a variável irá armazenar, como números inteiros, números de ponto flutuante (decimais) ou caracteres. Alguns exemplos de tipos de dados em C são: `int`, `float`, `char`.
+- **Comentários em Bloco**: São utilizados para inserir comentários que ocupam várias linhas. O texto entre `/*` e `*/` é considerado um comentário em bloco e é ignorado pelo compilador.
 
-- **Nome da Variável**: É o identificador que usamos para referenciar a variável ao longo do programa. O nome da variável deve seguir regras específicas, como começar com uma letra ou underscore e não conter espaços ou caracteres especiais.
+Exemplo:
+```c
+/* Este é um
+   comentário em bloco */
+int altura = 175;  /* Outro comentário
+                     em bloco */
+```
+
+Os comentários são úteis para explicar o propósito do código, fornecer detalhes sobre a implementação ou fazer anotações para referência futura.
+
+### Formatação Adequada do Código 🌟
+
+A formatação adequada do código é importante para torná-lo mais legível e compreensível. Seguir os princípios do Clean Code ajuda a manter o código claro e facilita a leitura e a manutenção. Algumas diretrizes para uma boa formatação em C incluem:
+
+- **Indentação**: Utilize recuos consistentes para destacar blocos de código aninhados. Geralmente, utiliza-se 4 espaços para cada nível de indentação.
+
+- **Espaçamento**: Utilize espaços entre operadores, após vírgulas e pontos-e-vírgulas para melhorar a legibilidade do código. Evite espaços desnecessários em excesso. Separe conceitos visuais com espaços em branco para tornar o código mais legível.
+
+- **Quebra de Linhas**: Quebre linhas longas para evitar que o código ultrapasse a largura recomendada (geralmente 80-120 caracteres por linha). Quebre linhas após aberturas de parênteses ou colchetes, se necessário. Utilize uma quebra de linha adicional para separar blocos lógicos de código.
+
+- **Nomenclatura**: Utilize nomes significativos para variáveis, funções e outros identificadores. Siga as convenções de nomenclatura da linguagem, como utilizar letras minúsculas para variáveis e letras maiúsculas para constantes.
+
+Além disso, ao seguir os princípios do Clean Code, considere:
+
+- **Evitar Comentários Desnecessários**: Escreva um código claro e autoexplicativo, evitando comentários óbvios ou desnecessários. Comentários devem ser utilizados para explicar o porquê e não o como.
+
+- **Atualizar Comentários**: Mantenha os comentários atualizados com o código. Se você alterar algo no código, certifique-se de atualizar os comentários correspondentes para refletir as alterações.
+
+- **Evitar Código Comentado**: Remova código comentado que não é mais utilizado. Isso mantém o código limpo e evita confusão.
 
 Exemplo:
 ```c
 int idade;
 float altura;
-char letra;
-```
 
-### Operadores e Expressões ➗
-
-Em C, os operadores são símbolos especiais que realizam operações em valores ou variáveis. As expressões são combinações de operadores, variáveis e valores que produzem um resultado.
-
-- **Operadores Aritméticos**: São utilizados para realizar operações matemáticas básicas, como adição, subtração, multiplicação e divisão. Alguns exemplos de operadores aritméticos em C são: `+` (adição), `-` (subtração), `*` (multiplicação), `/` (divisão).
-
-Exemplo:
-```c
-int soma = 2 + 3;       // Resultado: 5
-int subtracao = 7 - 4;  // Resultado: 3
-float multiplicacao = 2.5 * 4;  // Resultado: 10.0
-float divisao = 10 / 3;  // Resultado: 3.0
-```
-
-- **Operadores de Atribuição**: São utilizados para atribuir um valor a uma variável. O operador de atribuição em C é o sinal de igual `=`.
-
-Exemplo:
-```c
-int idade = 25;
-float altura = 1.75;
-char letra = 'A';
-```
-
-- **Operadores de Comparação**: São utilizados para comparar valores e produzir um resultado booleano (`verdadeiro` ou `falso`). Alguns exemplos de operadores de comparação em C são: `==` (igual), `!=` (diferente), `<` (menor que), `>` (maior que), `<=` (menor ou igual a), `>=` (maior ou igual a).
-
-Exemplo:
-```c
-int x = 5;
-int y = 10;
-
-if (x == y) {
-    printf("x é igual a y");
+if (idade >= 18 && altura > 160) {
+    printf("Você pode entrar");
 } else {
-    printf("x é diferente de y");
+    printf("Você não pode entrar");
 }
 ```
-
-- **Operadores Lógicos**: São utilizados para combinar expressões booleanas e produzir um resultado booleano. Alguns exemplos de operadores lógicos em C são: `&&` (E lógico), `||` (OU lógico), `!` (NÃO lógico).
-
-Exemplo:
-```c
-int a = 5;
-int b = 10;
-int c = 3;
-
-if (a > b && a > c) {
-    printf("a é o maior número");
-} else if (b > a && b > c) {
-    printf("b é o maior número");
-} else {
-    printf("c é o maior número");
-}
-```
-
-### Instruções 🖋️
-
-As instruções em C são comandos que executam ações no programa. Cada instrução é finalizada com um ponto e vírgula `;`.
-
-Exemplo Figurativo:
-```c
-int idade;
-printf("Digite sua idade: ");
-scanf("%d", &idade);
-printf("Você tem %d anos\n", idade);
-```
-
-Nesse exemplo, declaramos uma variável `idade` do tipo `int`. Utilizamos a função `printf` para exibir uma mensagem solicitando ao usuário que digite sua idade. Em seguida, utilizamos a função `scanf` para ler o valor digitado e armazená-lo na variável `idade`. Por fim, utilizamos a função `printf` novamente para exibir a idade digitada.
 
 ### Exercícios Práticos 💻🔥
 
-Aqui estão alguns exercícios práticos para você praticar a sintaxe da linguagem C:
+Aqui estão alguns exercícios práticos para você praticar o uso de comentários, a formatação adequada do código e seguir os princípios do Clean Code em C:
 
-1. Escreva um programa em C que solicita ao usuário para digitar
+1. Escreva um programa em C que calcula e exibe a média de três notas. Utilize comentários para explicar cada etapa do cálculo e aplique uma formatação adequada ao código.
 
- dois números inteiros, e em seguida, exibe o resultado da multiplicação entre eles.
+2. Escreva um programa em C que lê o nome e a idade de uma pessoa e exibe uma mensagem de boas-vindas. Utilize comentários para explicar o propósito de cada linha do código e siga os princípios do Clean Code.
 
-2. Escreva um programa em C que lê um número inteiro e verifica se ele é positivo, negativo ou igual a zero. Exiba uma mensagem apropriada.
+3. Escreva um programa em C que verifica se um número é divisível por 3 e por 5. Exiba uma mensagem apropriada para cada caso. Utilize uma formatação adequada para melhorar a legibilidade do código e remova qualquer código comentado desnecessário.
 
-3. Escreva um programa em C que lê o raio de um círculo e calcula e exibe a sua circunferência. Dica: a fórmula para calcular a circunferência de um círculo é `circunferencia = 2 * pi * raio`, onde `pi` é uma constante aproximadamente igual a 3.14159.
-
-4. Escreva um programa em C que solicita ao usuário para digitar um número e verifica se ele é par ou ímpar. Exiba uma mensagem apropriada.
-
-5. Desafio de Pesquisa: Pesquise sobre o operador condicional ternário em C (`? :`). Como ele funciona? Crie um exemplo utilizando o operador condicional ternário.
+4. Desafio de Pesquisa: Pesquise sobre as melhores práticas de formatação e comentários em C, seguindo os princípios do Clean Code. Aplique essas práticas em um exemplo de código e explique os benefícios de seguir essas diretrizes.
 
 ### Conclusão
 
-Nesta seção, exploramos a sintaxe da linguagem C, incluindo declaração de variáveis, operadores, expressões e instruções. Aprendemos como declarar variáveis, realizar operações com operadores aritméticos, comparar valores com operadores de comparação, combinar expressões com operadores lógicos e utilizar instruções para executar ações no programa. 
+Nesta seção, aprendemos sobre o uso de comentários e a importância da formatação adequada do código em C, seguindo os princípios do Clean Code. Comentários são úteis para documentar o código e fornecer informações adicionais, enquanto a formatação adequada facilita a leitura e a manutenção do código.
 
-Os exercícios práticos fornecem uma oportunidade para você aplicar os conceitos aprendidos e aprimorar suas habilidades de programação em C. Continue praticando e explorando a sintaxe da linguagem para se tornar um(a) programador(a) mais habilidoso(a) em C! 💪💻
+Pratique a utilização de comentários para explicar o código, siga as diretrizes de formatação adequada e aplique os princípios do Clean Code para tornar seu código mais legível e compreensível. Os exercícios práticos fornecem uma oportunidade para você aplicar esses conceitos. Continue praticando e explorando as melhores práticas de comentários, formatação e Clean Code para se tornar um(a) programador(a) mais habilidoso(a) em C! 💪💻
