--- a/roadmap/pt/1_Introducao_a_Programacao/3.MD
+++ b/roadmap/pt/1_Introducao_a_Programacao/3.MD
@@ -7,7 +7,8 @@ Neste tópico, vamos aprender como configurar o ambiente de desenvolvimento para
 Um compilador é um programa que traduz o código fonte escrito em linguagem C para um formato executável pelo computador. Vamos instalar o compilador GCC, que é amplamente utilizado e está disponível em diferentes sistemas operacionais.
 
 🔧 Exemplo:
-- **Windows**: Para instalar o compilador GCC no Windows, você pode usar o MinGW (Minimalist GNU for Windows). Faça o download do instalador do MinGW (https://www.msys2.org/) e siga as instruções de instalação.
+- **Windows**: Para instalar o compilador GCC no Windows, você pode usar o MinGW (Minimalist GNU for Windows). Faça o download do instalador do MinGW (https://github.com/devscafecommunity/CafeWithCode_Course/blob/main/installers/mingw-get-setup.exe) e siga as instruções de instalação.
+SourceForge: (https://sourceforge.net/projects/mingw/)
 - **Mac**: No Mac, você pode instalar o GCC através do Xcode Command Line Tools. Abra o Terminal e execute o seguinte comando: `xcode-select --install`. Siga as instruções para concluir a instalação.
 - **Linux**: No Linux, o GCC geralmente já está instalado. Se não estiver, você pode instalá-lo usando o gerenciador de pacotes da sua distribuição. Por exemplo, no Ubuntu, execute o comando: `sudo apt-get install build-essential`.
 
