--- a/roadmap/pt/1_Introducao_a_Programacao/1.MD
+++ b/roadmap/pt/1_Introducao_a_Programacao/1.MD
@@ -22,7 +22,8 @@ Aqui estão algumas razões pelas quais aprender C pode ser uma ótima escolha: 
 
 Aqui estão algumas características importantes da linguagem C: 📝
 
-- **Baixo nível**: A linguagem C permite que você acesse diretamente a memória do computador, o que a torna uma linguagem de nível baixo. Isso oferece um controle mais preciso sobre o hardware, permitindo a otimização de código para melhor desempenho.
+- **Baixo nível/Medio nivel**: A linguagem C permite que você acesse diretamente a memória do computador, o que a torna uma linguagem de nível baixo. Isso oferece um controle mais preciso sobre o hardware, permitindo a otimização de código para melhor desempenho, e ainda sim mantem-se bastante legivel para
+programadores.
 
 - **Tipagem estática**: Em C, as variáveis devem ter seus tipos declarados antes de serem usadas. Isso ajuda a evitar erros de tipos durante a execução do programa.
 
